webpack config loader

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -10,7 +10,7 @@
       <header class="container pb-4">
         <nav class="navbar navbar-expand-lg navbar-light navbar__ripple pb-0 pt-0">
           <a class="navbar-brand p-0" href="#">
-            <img src="../src/img/logo.png" height="52" alt="Ripple Company Logo">
+            <img src="../img/logo.png" height="52" alt="Ripple Company Logo">
             <h1 class="text-hide">Ripple Company</h1>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,16 +46,16 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="../src/img/slider-item.png" alt="Ripple slide 1">
+              <img class="d-block w-100" src="../img/slider-item.png" alt="Ripple slide 1">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="../src/img/slider-item.png" alt="Ripple slide 2">
+              <img class="d-block w-100" src="../img/slider-item.png" alt="Ripple slide 2">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="../src/img/slider-item.png" alt="Ripple slide 3">
+              <img class="d-block w-100" src="../img/slider-item.png" alt="Ripple slide 3">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="../src/img/slider-item.png" alt="Ripple slide 4">
+              <img class="d-block w-100" src="../img/slider-item.png" alt="Ripple slide 4">
             </div>
           </div>
         </div>
@@ -70,7 +70,7 @@
                   <p class="d-inline-block mb-2 text-yellow text-uppercase">Lorem ipsum dolor sit amet</p>
                   <div class="border-dots"></div>
                   <p class="card-text mb-auto">
-                  <img src="../src/img/doc.png" class="float-left float-left pr-3 pt-1" alt="Board" />
+                  <img src="../img/doc.png" class="float-left float-left pr-3 pt-1" alt="Board" />
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                   <a href="#" class="btn btn-outline-secondary btn--more mt-3">Read More</a>
                 </div>
@@ -85,7 +85,7 @@
                   <p class="d-inline-block mb-2 text-yellow text-uppercase">Lorem ipsum dolor sit amet</p>
                   <div class="border-dots"></div>
                   <p class="card-text mb-auto">
-                  <img src="../src/img/board.png" class="float-left float-left pr-3 pt-1" alt="Board" />
+                  <img src="../img/board.png" class="float-left float-left pr-3 pt-1" alt="Board" />
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                   <a href="#" class="btn btn-outline-secondary btn--more mt-3">Read More</a>
                 </div>
@@ -100,7 +100,7 @@
                   <p class="d-inline-block mb-2 text-yellow text-uppercase">Lorem ipsum dolor sit amet</p>
                   <div class="border-dots"></div>
                   <p class="card-text mb-auto">
-                  <img src="../src/img/nots.png" class="float-left float-left pr-3 pt-1" alt="Board" />
+                  <img src="../img/nots.png" class="float-left float-left pr-3 pt-1" alt="Board" />
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                   <a href="#" class="btn btn-outline-secondary btn--more mt-3">Read More</a>
                 </div>
@@ -115,7 +115,7 @@
                   <p class="d-inline-block mb-2 text-yellow text-uppercase">Lorem ipsum dolor sit amet</p>
                   <div class="border-dots"></div>
                   <p class="card-text mb-auto">
-                  <img src="../src/img/monitor.png" class="float-left float-left pr-3 pt-1" alt="Board" />
+                  <img src="../img/monitor.png" class="float-left float-left pr-3 pt-1" alt="Board" />
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                   <a href="#" class="btn btn-outline-secondary btn--more mt-3">Read More</a>
                 </div>
@@ -164,7 +164,7 @@
         <div class="row">
           <div class="col-sm">
             <div class="card border-0">
-              <img class="card-img-top text-uppercase" src="../src/img/work1.png" alt="Work 1">
+              <img class="card-img-top text-uppercase" src="../img/work1.png" alt="Work 1">
               <div class="card-body pr-0 pl-0 pt-2">
                 <h3 class="card-title text-yellow text-uppercase">Lorem ipsum dolor sit amet</h3>
                 <p class="card-text ellipsis-rows">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -173,7 +173,7 @@
           </div>
           <div class="col-sm">
             <div class="card border-0">
-              <img class="card-img-top text-uppercase" src="../src/img/work2.png" alt="Work 2">
+              <img class="card-img-top text-uppercase" src="../img/work2.png" alt="Work 2">
               <div class="card-body pr-0 pl-0 pt-2">
                 <h3 class="card-title text-yellow text-uppercase">Lorem ipsum dolor sit amet</h3>
                 <p class="card-text ellipsis-rows">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -182,7 +182,7 @@
           </div>
           <div class="col-sm">
             <div class="card border-0">
-              <img class="card-img-top text-uppercase" src="../src/img/work3.png" alt="Work 3">
+              <img class="card-img-top text-uppercase" src="../img/work3.png" alt="Work 3">
               <div class="card-body pr-0 pl-0 pt-2">
                 <h3 class="card-title text-yellow text-uppercase">Lorem ipsum dolor sit amet</h3>
                 <p class="card-text ellipsis-rows">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -191,7 +191,7 @@
           </div>
           <div class="col-sm">
             <div class="card border-0">
-              <img class="card-img-top text-uppercase" src="../src/img/work4.png" alt="Work 4">
+              <img class="card-img-top text-uppercase" src="../img/work4.png" alt="Work 4">
               <div class="card-body pr-0 pl-0 pt-2">
                 <h3 class="card-title text-yellow text-uppercase">Lorem ipsum dolor sit amet</h3>
                 <p class="card-text ellipsis-rows">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -268,11 +268,10 @@
           &copy; 2011. All Rights Reserved. Powered by Wordpress.
         </p>
         <p>
-          <img src="../src/img/bird.png" alt="twitter">
+          <img src="../img/bird.png" alt="twitter">
           We've launched a new #wordpress theme last night #themeforest. <span>8days ago</span>.
         </p>
       </div>
     </footer>
-    <script src="./bundle.js"></script>
   </body>
 </html>
