--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
     <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title></title>
+    <title>Ripple !</title>
   </head>
   <body>
-    <section class="container ripple">
+    <div class="container ripple">
       <header class="container pb-4">
         <nav class="navbar navbar-expand-lg navbar-light navbar__ripple pb-0 pt-0">
           <a class="navbar-brand p-0" href="#">
             <img src="../img/logo.png" height="52" alt="Ripple Company Logo">
-            <h1 class="text-hide">Ripple Company</h1>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,6 +37,7 @@
         </nav>
       </header>
       <main class="container">
+        <h1 class="text-hide">Ripple Company</h1>
         <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators custom-carousel">
             <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
@@ -147,7 +147,8 @@
                 <p class="card-text mb-auto">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <form class="mt-4">
-                  <input type="text" class="form-control form-mail" placeholder="you@yourdomain.com ...">
+                  <label for="texta" class="d-none">mail :</label>
+                  <input type="text" class="form-control form-mail" placeholder="you@yourdomain.com ..." id="texta">
                 </form>
               </div>
             </div>
@@ -261,7 +262,7 @@
           </div>
         </div>
       </main>
-    </section>
+    </div>
     <footer class="container mt-3">
       <div class="d-flex flex-row justify-content-between footage">
         <p>
